# res_tailwindcss

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  README.md  bsconfig.json  dune-project  package.json  res_tailwindcss.install  res_tailwindcss.opam
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  publish.yml  publish_prerelease.yml
rescript/: package.json  pnpm-lock.yaml  rescript.json
rescript/__tests__/: test.js  test.res
rescript/css/: tailwind.css
rescript/src/: View.js  View.res
src/: configs.ml  css_lexer.mll  css_parser.mly  dune  dune-project  lexer.mll  parser.mly  prelude.ml  res_tailwindcss.ml  res_tailwindcss.opam  spelling_corrector.ml  types.ml  util.ml
src/ppx/: configs.ml  css_lexer.mll  dune  ppx_tailwindcss.ml  res_tailwindcss.ml  spelling_corrector.ml  util.ml
test/: bsconfig.json  package.json  ppx_tailwindcss.config.json
test/__tests__/: test.js  test.res
test/css/: tailwind.css
test/src/: View.js  View.res
