opam-version: "2.0"
name: "res_tailwindcss"
version: "0.1.13"
synopsis: "PPX validates the tailwindcss class names"
description: """
ppx_tailwindcss validates the tailwindcss class names in compile time.
"""
maintainer: "Greenlabs Dev <developer@greenlabs.co.kr>"
authors: "Greenlabs Dev <developer@greenlabs.co.kr>"
license: "MIT"
homepage: "https://github.com/green-labs/res_tailwindcss"
bug-reports: "https://github.com/green-labs/res_tailwindcss/issues"
dev-repo: "git+https://github.com/green-labs/res_tailwindcss.git"
depends: [
  "ocaml" { = "4.14.0"}
  "dune" { >= "2.8"}
  "ppxlib" { = "0.24.0"}
  "base" {< "v0.15"}
  "ppx_inline_test"
  "ppx_expect"
  "ppx_deriving"
  "menhir" { >= "20211230"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
