(menhir
 (modules css_parser))

(ocamllex css_lexer)

(library
 (inline_tests
  (deps
   "tailwind.css"))
 (name res_tailwindcss)
 (public_name res_tailwindcss)
 (kind ppx_rewriter)
 (libraries core ppxlib)
 (flags
  (:standard -w -9)) ; 9 = labels not bound in record pattern
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect ppx_deriving.show)))
